--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css" />
-
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Mobile Meta Tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>listes</title>
 </head>
 
@@ -24,7 +26,7 @@
             <h1 class="title">Lorem Ipem</h1>
             <div class="img-text">
                 <div class="content">
-                    Dolor sit amet, consectetur adipiscing elit. Duis facilisis, dolor eget feugiat ultrices, urna nunc molestie enim, et aliquam ante nisl a leo. Aliquam porttitor magna in augue ullamcorper tincidunt. Pellentesque luctus orci magna, sed tempor justo tincidunt
+                    Dolor sit amet, consectetur adipiscing elit. duis facilisis, dolor eget feugiat ultrices, urna nunc molestie enim, et aliquam ante nisl a leo. Aliquam porttitor magna in augue ullamcorper tincidunt. Pellentesque luctus orci magna, sed tempor justo tincidunt
                     et. Donec eget dolor ac lectus porta finibus a sed nibh. In congue erat diam, at tempus lectus convallis quis. Duis viverra lorem vitae turpis sollicitudin, quis feugiat risus semper. Cras tristique iaculis porttitor. Nulla eu ipsum
                     dolor. Duis ullamcorper tellus iaculis dolor volutpat commodo.
                 </div>
